--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,7 +1,6 @@
 version: "3.1"
 
 stories:
-
 - story: happy path
   steps:
   - intent: greet
@@ -28,3 +27,44 @@ stories:
   - action: utter_did_that_help
   - intent: deny
   - action: utter_goodbye
+
+# New stories for add_contact intent
+- story: add contact happy path
+  steps:
+  - intent: add_contact
+  - action: utter_add_contact_ask_name
+  - intent: inform
+    entities:
+    - contact_name: "John"
+  - action: utter_add_contact_ask_address
+  - intent: inform
+    entities:
+    - wallet_address: "0x123456789abcdef"
+  - action: action_validate_wallet_address
+  - action: utter_add_contact_confirm
+  - action: action_reset_contact_slots
+
+- story: add contact with invalid address
+  steps:
+  - intent: add_contact
+  - action: utter_add_contact_ask_name
+  - intent: inform
+    entities:
+    - contact_name: "Alice"
+  - action: utter_add_contact_ask_address
+  - intent: inform
+    entities:
+    - wallet_address: "invalid-address"
+  - action: action_validate_wallet_address
+  - action: utter_add_contact_invalid_address
+  - action: utter_add_contact_ask_address
+
+- story: add contact with name and address in initial request
+  steps:
+  - intent: add_contact
+    entities:
+    - contact_name: "Bob"
+    - wallet_address: "0x987654321fedcba"
+  - action: action_validate_wallet_address
+  - action: utter_add_contact_confirm
+  - action: action_reset_contact_slots
