--- a/data/stories.yml
+++ b/data/stories.yml
@@ -28,7 +28,7 @@ stories:
   - intent: deny
   - action: utter_goodbye
 
-# New stories for add_contact intent
+# Simplified add contact flow
 - story: add contact happy path
   steps:
   - intent: add_contact
@@ -41,7 +41,9 @@ stories:
     entities:
     - wallet_address: "0x123456789abcdef"
   - action: action_validate_wallet_address
-  - action: utter_add_contact_ask_nickname
+  - slot_was_set:
+    - address_valid: true
+  - intent: inform
   - action: action_reset_contact_slots
 
 - story: add contact with invalid address
@@ -56,12 +58,16 @@ stories:
     entities:
     - wallet_address: "invalid-address"
   - action: action_validate_wallet_address
+  - slot_was_set:
+    - address_valid: false
   - action: utter_add_contact_ask_address
   - intent: inform
     entities:
     - wallet_address: "0x987654321fedcba"
   - action: action_validate_wallet_address
-  - action: utter_add_contact_ask_nickname
+  - slot_was_set:
+    - address_valid: true
+  - intent: inform
   - action: action_reset_contact_slots
 
 - story: add contact with name and address in initial request
@@ -71,5 +77,7 @@ stories:
     - contact_name: "Bob"
     - wallet_address: "0x987654321fedcba"
   - action: action_validate_wallet_address
-  - action: utter_add_contact_confirm
+  - slot_was_set:
+    - address_valid: true
+  - intent: inform
   - action: action_reset_contact_slots
