Fix wallet address validation flow and action endpoint configuration

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -308,22 +308,24 @@ nlu:
     - [John](contact_name)
     - [Alice](contact_name)
     - [Bob](contact_name)
-    - [0x123456789abcdef](wallet_address)
-    - [0x987654321fedcba](wallet_address)
+    - [0x123456789abcdef123456789abcdef123456789a](wallet_address)
+    - [0x987654321fedcba987654321fedcba98765432](wallet_address)
     - [My friend](contact_name)
     - [My boss](contact_name)
     - [Client](contact_name)
     - [Supplier](contact_name)
     - His name is [David](contact_name)
-    - Her wallet is [0xabcdef123456](wallet_address)
+    - Her wallet is [0xabcdef123456789abcdef123456789abcdef](wallet_address)
     - [ETH](network_type)
     - [BTC](network_type)
     - [EOS](network_type)
-    - It's [0x1a2b3c4d5e6f](wallet_address)
+    - It's [0x1a2b3c4d5e6f7a8b9c0d1e2f3a4b5c6d7e8f9a0](wallet_address)
     - The name is [Jane](contact_name)
-    - The address is [0x2468ace](wallet_address)
+    - The address is [0x2468ace02468ace02468ace02468ace02468ac](wallet_address)
     - Save as [Work](contact_name)
     - [Mike from work](contact_name)
     - [NFT artist](contact_name)
     - [My landlord](contact_name)
     - [Degen friend](contact_name)
+    - [not-a-valid-address](wallet_address)
+    - [invalid-wallet-format](wallet_address)
