Integrate CryptoBERT model for advanced wallet address validation

--- a/domain.yml
+++ b/domain.yml
@@ -67,6 +67,7 @@ slots:
     mappings:
     - type: from_entity
       entity: network_type
+    - type: custom
       
   address_valid:
     type: bool
