--- a/config.yml
+++ b/config.yml
@@ -20,11 +20,13 @@ pipeline:
     min_ngram: 1
     max_ngram: 4
   - name: DIETClassifier
-    epochs: 100
+    epochs: 150
     constrain_similarities: true
+    model_confidence: softmax
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
+    retrieval_intent: faq
   - name: FallbackClassifier
     threshold: 0.6
     ambiguity_threshold: 0.1
