--- a/config.yml
+++ b/config.yml
@@ -33,6 +33,7 @@ pipeline:
   - name: FallbackClassifier
     threshold: 0.6
     ambiguity_threshold: 0.1
+    fallback_intent_name: nlu_fallback
 # # No configuration for the NLU pipeline was provided. The following default pipeline was used to train your model.
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
