--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,18 +11,21 @@ rules:
   - intent: bot_challenge
   - action: utter_iamabot
 
-# Simplified rule based on validation status
 - rule: Ask for wallet address again after invalid address
   steps:
   - action: action_validate_wallet_address
   - slot_was_set:
     - address_valid: false
   - action: utter_add_contact_ask_address
+  - active_loop: null
+  - wait_for_user_input: true
   
 - rule: Start adding contact flow
   steps:
   - intent: add_contact
   - action: utter_add_contact_ask_name
+  - active_loop: null
+  - wait_for_user_input: true
 
 # Rules for handling interruptions
 - rule: Handle sentiment question during any flow
@@ -31,6 +34,7 @@ rules:
   steps:
   - intent: ask_sentiment
   - action: action_analyze_sentiment
+  - active_loop: null
   
 - rule: Handle scam check during any flow
   condition:
@@ -38,6 +42,7 @@ rules:
   steps:
   - intent: check_scam
   - action: utter_ask_crypto_description
+  - active_loop: null
   
 - rule: Handle crypto topic during any flow
   condition:
@@ -45,6 +50,7 @@ rules:
   steps:
   - intent: crypto_topic
   - action: action_classify_topic
+  - active_loop: null
   
 - rule: Handle expertise sharing during any flow
   condition:
@@ -52,6 +58,7 @@ rules:
   steps:
   - intent: share_expertise
   - action: action_update_user_expertise
+  - active_loop: null
   
 - rule: Handle crypto mention during any flow
   condition:
@@ -59,3 +66,4 @@ rules:
   steps:
   - intent: mention_crypto
   - action: action_extract_crypto_entities
+  - active_loop: null
