--- a/domain.yml
+++ b/domain.yml
@@ -15,6 +15,8 @@ intents:
   - crypto_topic
   - share_expertise
   - mention_crypto
+  - nlu_fallback
+  - out_of_scope
 
 responses:
   utter_greet:
@@ -84,6 +86,8 @@ entities:
   - crypto_description
   - continue_flow
   - switch_context
+
+forms: {}
 
 slots:
   contact_name:
