--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,57 +11,44 @@ rules:
   - intent: bot_challenge
   - action: utter_iamabot
 
-- rule: Ask for wallet address again after invalid address
+- rule: Start adding contact flow
+  steps:
+  - intent: add_contact
+  - action: utter_add_contact_ask_name
+
+- rule: Validate wallet address and ask again if invalid
   steps:
   - action: action_validate_wallet_address
   - slot_was_set:
     - address_valid: false
   - action: utter_add_contact_ask_address
-  - active_loop: null
-  
-- rule: Start adding contact flow
-  steps:
-  - intent: add_contact
-  - action: utter_add_contact_ask_name
-  - active_loop: null
 
-# Rules for handling interruptions
-- rule: Handle sentiment question during any flow
-  condition:
-  - active_loop: null
+- rule: Analyze sentiment when asked
   steps:
   - intent: ask_sentiment
   - action: action_analyze_sentiment
-  - active_loop: null
-  
-- rule: Handle scam check during any flow
-  condition:
-  - active_loop: null
+
+- rule: Detect scam when asked
   steps:
   - intent: check_scam
   - action: utter_ask_crypto_description
-  - active_loop: null
-  
-- rule: Handle crypto topic during any flow
-  condition:
-  - active_loop: null
+
+- rule: Process crypto topic
   steps:
   - intent: crypto_topic
   - action: action_classify_topic
-  - active_loop: null
-  
-- rule: Handle expertise sharing during any flow
-  condition:
-  - active_loop: null
+
+- rule: Get user expertise
   steps:
   - intent: share_expertise
   - action: action_update_user_expertise
-  - active_loop: null
-  
-- rule: Handle crypto mention during any flow
-  condition:
-  - active_loop: null
+
+- rule: Extract crypto entities
   steps:
   - intent: mention_crypto
   - action: action_extract_crypto_entities
-  - active_loop: null
+
+- rule: Handle out of scope messages
+  steps:
+  - intent: out_of_scope
+  - action: utter_out_of_scope
